# isut

./: .gitignore  inm.nim  inm.nimble  isu.pyproject  lab.py  main.cpp  main.py  poetry.toml  pyproject.toml  setup.py  ui.ipynb
inm/: __init__.py  demo.nim  draw.nim
inm/tests/: test1.nim
irs/: Cargo.toml  build.rs
isu/: app.py
isu/actions/: op.py  queue.py
isu/models/: demo.py  section.py  xml.py
isu/models/demo/: __init__.py  load.py  steps.py
isu/models/task/: __init__.py  table.py
isu/models/video/: format.py  frame.py  player.py  render.py
isu/ui/: __init__.py  audio.py  audio.ui  crop.py  crop.ui  insert.py  insert.ui  noop.py  noop.ui  optab.py  optab.ui  pace.py  pace.ui  prefs.py  prefs.ui  prog.py  prog.ui  render.py  render.ui  section.py  section.ui  shell.py  shell.ui  style.qss  text.py  text.ui  window.py  window.ui
isu/utils/: __init__.py
isu/view/: __init__.py  task.py  window.py
isu/view/dialog/: __init__.py  about.py  opwiz.py  preferences.py  prog.py
isu/view/misc/: mw.ui
isu/view/ops/: __init__.py  audio.py  concat.py  crop.py  insert.py  nop.py  pace.py  render.py  section.py  shell.py  tabs.py  text.py
isu/view/ui/: shell.py
