[tool.poetry]
name = "isu"
version = "0.1.0"
description = ""
authors = ["Chris P <Chris P>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
PySide6 = "^6.2.4"
PyQt6 = "^6.2.3"
imageio = "^2.16.1"
imageio-ffmpeg = "^0.4.5"
Pillow = "^9.1.0"
numpy = "^1.22.3"
opencv-python = "^4.5.5"
python-ffmpeg = "^1.0.13"
nimporter = "^2.0.0"
av = "^9.1.1"
lxml = "^4.8.0"
gizeh = "^0.1.11"
python-docx = "^0.8.11"

[tool.poetry.dev-dependencies]
ipykernel = "^6.12.1"
pytest-qt = "^4.0.2"
pytest = "^7.1.1"
pylint = "^2.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
