[package]
name = "irs"
version = "0.1.0"
edition = "2021"

[lib]
name = "irs"
path = "src/lib.rs"
crate-type = ["staticlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.16.2", features = ["extension-module"] }
cxx = "1.0.66"
cxx-qt = "0.2.1"
cxx-qt-lib = "0.2.1"

[build-dependencies]
cxx-qt-build = "0.2.1"
clang-format = "0.1.2"
